fix: menu item alignment/button margin

--- a/app/index.scss
+++ b/app/index.scss
@@ -32,6 +32,7 @@ button {
   line-height: 1;
   font-size: 1rem;
   padding: 0;
+  margin: 0;
   outline: none;
 }
 
